--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
     <h1>Welcome to the Fly House</h1>
     <p>This is a simple HTML page.</p>
     <p>Enjoy your stay!</p>
+    <footer>
+        <p>&copy; 2023 Fly House</p>
+
 </body>
 </html>
