--- a/index.html
+++ b/index.html
@@ -1,15 +1,214 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Fly House</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Landing Page Avançada</title>
+    <style>
+        * {
+          box-sizing: border-box;
+          margin: 0;
+          padding: 0;
+          font-family: 'Segoe UI', sans-serif;
+        }
+
+        body {
+          color: #333;
+          line-height: 1.6;
+        }
+
+        header {
+          background: linear-gradient(to right, #4a00e0, #8e2de2);
+          color: white;
+          padding: 2rem;
+          text-align: center;
+        }
+
+        header h1 {
+          font-size: 2.5rem;
+          margin-bottom: 0.5rem;
+        }
+
+        header p {
+          font-size: 1.2rem;
+        }
+
+        nav {
+          background-color: #222;
+          display: flex;
+          justify-content: center;
+          padding: 0.8rem;
+        }
+
+        nav a {
+          color: white;
+          margin: 0 1rem;
+          text-decoration: none;
+          transition: color 0.3s;
+        }
+
+        nav a:hover {
+          color: #8e2de2;
+        }
+
+        .hero {
+          background: url('https://source.unsplash.com/1600x700/?technology') center/cover no-repeat;
+          height: 70vh;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          color: white;
+          text-shadow: 1px 1px 10px #000;
+          text-align: center;
+          padding: 2rem;
+        }
+
+        .hero h2 {
+          font-size: 3rem;
+        }
+
+        .section {
+          padding: 4rem 2rem;
+          max-width: 1000px;
+          margin: auto;
+        }
+
+        .services {
+          display: flex;
+          flex-wrap: wrap;
+          gap: 2rem;
+          justify-content: space-between;
+        }
+
+        .service {
+          flex: 1 1 calc(33.33% - 2rem);
+          background: #f9f9f9;
+          padding: 1.5rem;
+          border-radius: 10px;
+          box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+
+        .testimonials {
+          background-color: #f0f0f0;
+          padding: 2rem;
+          border-radius: 10px;
+        }
+
+        .testimonial {
+          margin-bottom: 1.5rem;
+          font-style: italic;
+        }
+
+        .testimonial strong {
+          display: block;
+          margin-top: 0.5rem;
+          color: #4a00e0;
+        }
+
+        form {
+          display: flex;
+          flex-direction: column;
+          gap: 1rem;
+        }
+
+        input, textarea, button {
+          padding: 0.8rem;
+          font-size: 1rem;
+          border: 1px solid #ccc;
+          border-radius: 8px;
+        }
+
+        button {
+          background: #4a00e0;
+          color: white;
+          border: none;
+          cursor: pointer;
+          transition: background 0.3s;
+        }
+
+        button:hover {
+          background: #6a11cb;
+        }
+
+        footer {
+          text-align: center;
+          padding: 1.5rem;
+          background-color: #222;
+          color: white;
+          margin-top: 2rem;
+        }
+
+        @media (max-width: 768px) {
+          .services {
+            flex-direction: column;
+          }
+
+          .hero h2 {
+            font-size: 2rem;
+          }
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to the Fly House</h1>
-    <p>This is a simple HTML page.</p>
-    <p>Enjoy your stay!</p>
-    <footer>
-        <p>&copy; 2023 Fly House</p>
+
+<header>
+    <h1>Bem-vindo à Nossa Solução</h1>
+    <p>Transformando ideias em experiências digitais incríveis</p>
+</header>
+
+<nav>
+    <a href="#servicos">Serviços</a>
+    <a href="#depoimentos">Depoimentos</a>
+    <a href="#contato">Contato</a>
+</nav>
+
+<section class="hero">
+    <h2>Construa seu futuro digital com a gente</h2>
+</section>
+
+<section id="servicos" class="section">
+    <h2>Nossos Serviços</h2>
+    <div class="services">
+        <div class="service">
+            <h3>Desenvolvimento Web</h3>
+            <p>Criação de sites modernos, responsivos e otimizados para SEO.</p>
+        </div>
+        <div class="service">
+            <h3>Design UX/UI</h3>
+            <p>Interfaces bonitas, intuitivas e com foco na experiência do usuário.</p>
+        </div>
+        <div class="service">
+            <h3>Marketing Digital</h3>
+            <p>Campanhas inteligentes para engajar e atrair novos clientes.</p>
+        </div>
+    </div>
+</section>
+
+<section id="depoimentos" class="section testimonials">
+    <h2>O que dizem sobre nós</h2>
+    <div class="testimonial">
+        "Equipe maravilhosa! Entregaram meu site muito antes do prazo."
+        <strong>— Mariana Costa</strong>
+    </div>
+    <div class="testimonial">
+        "Design incrível, funcionalidade impecável. Recomendo 100%!"
+        <strong>— João Pedro</strong>
+    </div>
+</section>
+
+<section id="contato" class="section">
+    <h2>Entre em Contato</h2>
+    <form>
+        <input type="text" placeholder="Seu nome" required>
+        <input type="email" placeholder="Seu email" required>
+        <textarea rows="5" placeholder="Sua mensagem..." required></textarea>
+        <button type="submit">Enviar Mensagem</button>
+    </form>
+</section>
+
+<footer>
+    © 2025 Sua Empresa. Todos os direitos reservados.
+</footer>
 
 </body>
 </html>
